<resources>
    <string name="app_name">MyEdit</string>
    <string name="menu_action_clear">Clear</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_save">Save</string>
    <string name="menu_action_open">Open</string>

    <string name="pref_open_mode">Open mode</string>
    <string name="pref_color">Color</string>
    <string name="pref_color_black">Black color</string>
    <string name="pref_color_red">Red color</string>
    <string name="pref_color_green">Green color</string>
    <string name="pref_color_blue">Blue color</string>

    <string name="pref_size">Size</string>
    <string name="pref_style">Style</string>
    <string name="pref_style_regular">Regular</string>
    <string name="pref_style_bold">Bold</string>
    <string name="pref_style_italic">Italic</string>
    <string name="title_activity_settings">Settings</string>

    <string name="dialog_title">File name</string>
    <string name="dialog_message_open">Input file name for open</string>
    <string name="dialog_message_save">Input file name for save</string>
    <string name="dialog_name_positive_button_open">Open</string>
    <string name="dialog_name_positive_button_save">Save</string>

    <string name="toast_save">Saved!</string>
    <string name="toast_clear">Cleared!</string>
    <string name="toast_error_find_file">File is not found!</string>
</resources>
