<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear"
        android:title="@string/menu_action_clear"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_open"
        android:title="@string/menu_action_open"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="100"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_save"
        android:title="@string/menu_action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>